...
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.side.equals(viewModel.menuItems["salad"])}'
                    android:onClick='@{() -> viewModel.setSide("salad")}'
                    android:text='@{viewModel.menuItems["salad"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salad_description" />

                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/soup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.side.equals(viewModel.menuItems["soup"])}'
                    android:onClick='@{() -> viewModel.setSide("soup")}'
                    android:text='@{viewModel.menuItems["soup"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soup_description" />


                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/potatoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.side.equals(viewModel.menuItems["potatoes"])}'
                    android:onClick='@{()-> viewModel.setSide("potatoes")}'
                    android:text='@{viewModel.menuItems["potatoes"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/potato_description" />

                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/rice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.side.equals(viewModel.menuItems["rice"])}'
                    android:onClick='@{() -> viewModel.setSide("rice")}'
                    android:text='@{viewModel.menuItems["rice"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/side_options" />

            <!-- TODO: set the text to the current subtotal value from the view model -->
            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                android:text="@{@string/subtotal(viewModel.subtotal)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal ￥5" />

            <!-- TODO: cancel the order when clicked -->
            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Order.Button.Cancel"
                android:onClick="@{() -> sideMenuFragment.cancelOrder()}"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <!-- TODO: go to the next screen when clicked -->
            <Button
                android:id="@+id/next_button"
...
