...
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/cauliflower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["cauliflower"])}'
                    android:onClick='@{() -> viewModel.setEntree("cauliflower")}'
                    android:text='@{viewModel.menuItems["cauliflower"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cauliflower_description" />

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/chili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["chili"])}'
                    android:onClick='@{() -> viewModel.setEntree("chili")}'
                    android:text='@{viewModel.menuItems["chili"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chili_description" />

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/pasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["pasta"])}'
                    android:onClick='@{() -> viewModel.setEntree("pasta")}'
                    android:text='@{viewModel.menuItems["pasta"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/skillet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["skillet"])}'
                    android:onClick='@{() -> viewModel.setEntree("skillet")}'
                    android:text='@{viewModel.menuItems["skillet"].name}'
                    android:textAppearance="?attr/textAppearanceBody1"
...
